[package]
name = "meshdb-server"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Mesh graph database server binary"

[[bin]]
name = "meshdb-server"
path = "src/main.rs"

[lib]
name = "meshdb_server"
path = "src/lib.rs"

[dependencies]
meshdb-core = { workspace = true }
meshdb-storage = { workspace = true }
meshdb-cluster = { workspace = true }
meshdb-cypher = { workspace = true }
meshdb-rpc = { workspace = true }
meshdb-bolt = { workspace = true }
meshdb-executor = { workspace = true }
chrono = { workspace = true }
chrono-tz = { workspace = true }
anyhow = "1"
thiserror = { workspace = true }
clap = { version = "4", features = ["derive"] }
serde = { workspace = true }
toml = "0.8"
tokio = { workspace = true }
tokio-stream = { version = "0.1", features = ["net"] }
tonic = "0.12"
tracing = { workspace = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
# OpenTelemetry / OTLP exporter — wired in `init_tracing` when
# `[tracing] otlp_endpoint = "..."` is set in the server config.
# Tonic-backed transport so it shares the same gRPC stack as the
# rest of the inter-peer traffic.
opentelemetry = { version = "0.27", default-features = false, features = ["trace"] }
opentelemetry_sdk = { version = "0.27", default-features = false, features = ["trace", "rt-tokio"] }
opentelemetry-otlp = { version = "0.27", default-features = false, features = ["grpc-tonic", "trace"] }
tracing-opentelemetry = { version = "0.28", default-features = false }
axum = { version = "0.7", default-features = false, features = ["tokio", "http1"] }
bcrypt = { workspace = true }
rustls = "0.23"
tokio-rustls = "0.26"
rustls-pemfile = "2"

[dev-dependencies]
tempfile = "3"
uuid = { workspace = true }
serde_json = { workspace = true }
meshdb-bolt = { workspace = true }
# Activate meshdb-rpc's `fault-inject` feature for the
# `two_pc_fault_injection` integration test. A dev-dependency row
# here turns the feature on for every meshdb-server test build
# without affecting the release binary / library.
meshdb-rpc = { workspace = true, features = ["fault-inject"] }
reqwest = { version = "0.12", default-features = false }
bcrypt = { workspace = true }
rcgen = "0.13"
rustls-pki-types = "1"
criterion = { workspace = true }

[[bench]]
name = "multi_raft_bench"
harness = false

[features]
# APOC-compatible scalars and procedures ship enabled by
# default — the `apoc` umbrella feature pulls in every
# namespace meshdb-executor knows about. Build with
# `--no-default-features` to opt out, optionally re-enabling
# specific namespaces:
#
#   cargo install meshdb-server                                          # full APOC (default)
#   cargo install meshdb-server --no-default-features                    # no APOC at all
#   cargo install meshdb-server --no-default-features --features apoc-coll
#                                                                        # just apoc.coll.*
default = ["apoc"]
apoc-coll = ["meshdb-executor/apoc-coll"]
apoc-text = ["meshdb-executor/apoc-text"]
apoc-map = ["meshdb-executor/apoc-map"]
apoc-util = ["meshdb-executor/apoc-util"]
apoc-convert = ["meshdb-executor/apoc-convert"]
apoc-date = ["meshdb-executor/apoc-date"]
apoc-number = ["meshdb-executor/apoc-number"]
apoc-create = ["meshdb-executor/apoc-create"]
apoc-meta = ["meshdb-executor/apoc-meta"]
apoc-refactor = ["meshdb-executor/apoc-refactor"]
apoc-path = ["meshdb-executor/apoc-path"]
apoc-cypher = ["meshdb-executor/apoc-cypher"]
apoc-load = ["meshdb-executor/apoc-load"]
apoc-export = ["meshdb-executor/apoc-export"]
apoc-trigger = ["meshdb-executor/apoc-trigger", "meshdb-rpc/apoc-trigger"]
# `apoc` umbrella enables the executor's full apoc surface plus
# the RPC-side trigger plumbing — so the default-features build
# of meshdb-server has live `apoc.trigger.*` install/fire support
# end-to-end. (Without `meshdb-rpc/apoc-trigger`, the
# `MeshService` write path's trigger hooks compile out and
# `apoc.trigger.install` would land in storage but no fires would
# ever happen.)
apoc = ["meshdb-executor/apoc", "apoc-trigger"]
